--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Homepage</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lobster%7CRoboto" rel="stylesheet">
+    <link rel="stylesheet" href="styles/index.css">
+
 </head>
 <body>
-    <h1>Soda City Initial Commit</h1>
+    <div class="header-wrapper">
+        <div class="top-bar-wrapper">
+            <div class="phone-number">
+                <div class="icon">
+                    <i class="fas fa-phone-volume"></i>
+                </div>
+
+                <p>555-555-5555</p>
+            </div>
+
+            <div class="logo-header">
+                <div class="logo">
+                    <img src="images/Soda City 48x96 Sign PROOF I -  2014 (1).png" alt="MainLogo"></a>
+                </div>
+            </div>
+
+            <div class="hours-location">
+                <p>123 Any Street, Austin, TX<br>
+                    8AM - 11PM</p>
+
+                <div class="icon">
+                    <i class="fas fa-map-marker-alt"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="nav-links">
+            <div class="link">
+                <a href="index.html">Home</a>
+            </div>
+            <div class="link">
+                <a href="contact.html">Contact</a>
+            </div>
+            <div class="link">
+                <a href="Menu.html">Menu</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
