Added completed Navbar to index HMTL and STYLES pages

--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
 <body>
     <div class="header-wrapper">
         <div class="top-bar-wrapper">
-            <div class="phone-number">
+            <div class="phone-number-wrapper">
                 <div class="icon">
                     <i class="fas fa-phone-volume"></i>
                 </div>
 
-                <p>555-555-5555</p>
+                <div class="phone-number">
+                    <p>(555) 555-5555</p>
+                    <div class="hours">
+                        <p>8AM - 11PM</p>
+                    </div>
+                </div>
             </div>
 
             <div class="logo-header">
@@ -27,9 +32,9 @@
                 </div>
             </div>
 
-            <div class="hours-location">
-                <p>123 Any Street, Austin, TX<br>
-                    8AM - 11PM</p>
+            <div class="location">
+                <p>258 N Main St<br>
+                    Gunnison, Utah 84634</p>
 
                 <div class="icon">
                     <i class="fas fa-map-marker-alt"></i>
@@ -37,15 +42,21 @@
             </div>
         </div>
 
-        <div class="nav-links">
+        <div class="nav-links-wrapper">
             <div class="link">
                 <a href="index.html">Home</a>
             </div>
+
             <div class="link">
                 <a href="contact.html">Contact</a>
             </div>
+
             <div class="link">
                 <a href="Menu.html">Menu</a>
+            </div>
+
+            <div class="link">
+                <a href="#">About</a>
             </div>
         </div>
     </div>
