Added nav styles file, adjusted Nav styles, adjusted Navbar HTML code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lobster%7CRoboto" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/nav.css">
 
 </head>
 <body>
@@ -37,7 +38,7 @@
                     Gunnison, Utah 84634</p>
 
                 <div class="icon">
-                    <i class="fas fa-map-marker-alt"></i>
+                        <a href= "https://www.google.com/maps/place/258+N+Main+St,+Gunnison,+UT+84634/@39.1591076,-111.8199568,17z/data=!3m1!4b1!4m5!3m4!1s0x874b805c534985af:0xef569876542cc509!8m2!3d39.1591076!4d-111.8177681"><i class="fas fa-map-marker-alt"></i></a>
                 </div>
             </div>
         </div>
