--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="logo-header">
                 <div class="logo">
-                    <img src="images/Soda City 48x96 Sign PROOF I -  2014 (1).png" alt="MainLogo"></a>
+                    <a href="index.html"><img src="images/Soda City 48x96 Sign PROOF I -  2014 (1).png" alt="MainLogo"></a>
                 </div>
             </div>
 
