--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
             <div class="logo-header">
                 <div class="logo">
-                    <img src="images/Soda City 48x96 Sign PROOF I -  2014 (1).png" alt="MainLogo"></a>
+                    <a href="index.html">
+                        <img src="images/Soda City 48x96 Sign PROOF I -  2014 (1).png" alt="MainLogo"></a>
+                    </a>
                 </div>
             </div>
 
@@ -59,11 +61,59 @@
             </div>
 
             <div class="link">
-                <a href="#">About</a>
+                <a href="#about">About</a>
             </div>
         </div>
     </div>
 
+    <div class="paralax">      
+    </div>
+
+    <div class="boxes-wrapper">
+        <div class="boxes">
+            <a href="Menu.html" class="link">
+                <div class="box">
+                    <h2>Menu</h2>
+                    <img src="/images/soda.jpeg" alt="soda" class="sodaImg">
+                </div>
+            </a>
+
+            <a href="https://www.instagram.com/mysodacity/" class="link">
+                <div class="box">
+                    <h2>Tag us on Instagram</h2>
+                    <img src="/images/allWhite.jpeg" alt="Instagram Pic" class="instaPic">
+                </div>
+            </a>
+
+            <a href="https://www.google.com/maps/place/258+N+Main+St,+Gunnison,+UT+84634/@39.1591076,-111.8199568,17z/data=!3m1!4b1!4m5!3m4!1s0x874b805c534985af:0xef569876542cc509!8m2!3d39.1591076!4d-111.8177681" class="link">
+                <div class="box">
+                    <h2>Location</h2>
+                    <div class="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3093.686673766846!2d-111.81995678464192!3d39.159107579531096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874b805c534985af%3A0xef569876542cc509!2s258+N+Main+St%2C+Gunnison%2C+UT+84634!5e0!3m2!1sen!2sus!4v1546631854819" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    <div class="about-wrapper">
+        <div class="about" id="about">
+            <div class="aboutImg">
+                <img src="/images/aboutUs.jpg" alt="Pic of owners" class="aboutUsImg">
+            </div>
+
+            <div class="aboutText">
+                <h2>About Us</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde ipsam quae incidunt vitae facere tenetur suscipit est culpa, explicabo dolores nesciunt aperiam! Cumque, rerum distinctio reprehenderit vero eligendi voluptates harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a animi nobis dolores quod voluptatum consequuntur officia vero perferendis inventore, tempora aliquid perspiciatis iusto mollitia doloribus, architecto et voluptate similique? Ab maiores magnam ea iure eos facere facilis, blanditiis exercitationem corporis iusto saepe laudantium a temporibus accusamus odio quisquam at nulla. Quo sapiente, nam, delectus a similique, minima natus praesentium impedit quas voluptatem quidem? Voluptatum adipisci </p>
+                
+            </div>
+        </div>
+    </div>
+
+    <div class="paralax2">
+
+    </div>
 
 
 
@@ -96,7 +146,7 @@
                 </div>
 
                 <div class="link">
-                    <a href="#">About</a>
+                    <a href="#about">About</a>
                 </div>
             </div>
         </div>
