--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                 </div>
     
                 <div class="link">
-                    <a href="#">About</a>
+                    <a href="index.html#about">About</a>
                 </div>
             </div>
         </div>
@@ -136,7 +136,7 @@
                 </div>
 
                 <div class="link">
-                    <a href="#">About</a>
+                    <a href="index.html#about">About</a>
                 </div>
             </div>
         </div>
