--- a/contact.html
+++ b/contact.html
@@ -73,22 +73,22 @@
 
     <div class="form">
         <div class="text-wrapper">
-            <div class="questions">Questions</div>
-            <div class="recomendatios">Recomendatios</div>
-            <div class="events">Events</div>
+            <div class="texts">Questions</div>
+            <div class="texts">Recomendatios</div>
+            <div class="texts">Events</div>
         </div>
         <div class="form-group">
-            <input type="text" id="fullName" placeholder="Your name">
+            <input type="text" id="fullName" placeholder="Your Name">
             <label for="fullName">Your name</label>
         </div>
 
         <div class="form-group">
-                <input type="Phone" id="phone" placeholder="phone">
+                <input type="Phone" id="phone" placeholder="Phone">
                 <label for="phone">Your phone</label>
          </div>
 
         <div class="form-group">
-            <input type="email" id="email" placeholder="and email">
+            <input type="email" id="email" placeholder="Email">
             <label for="email">Your email</label>
         </div>
 
