--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <a href="https://www.facebook.com/sodacitygunnisonut/"><i class="fab fa-facebook-f"></i></a>
                 </div>
                 <div class="icon">
-                    <a href="mysodacity@gmail.com"><i class="far fa-envelope"></i></a>
+                    <a href="contact.html"><i class="far fa-envelope"></i></a>
                 </div>
             </div>
 
