--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
                         <a href="https://www.facebook.com/sodacitygunnisonut/"><i class="fab fa-facebook-f"></i></a>
                     </div>
                     <div class="icon">
-                        <a href="mysodacity@gmail.com"><i class="far fa-envelope"></i></a>
+                        <a href="#"><i class="far fa-envelope"></i></a>
                     </div>
                 </div>
 
